[package]
name = "non_convex_opt"
version = "0.1.0"
authors = ["PritManGuy <prithvi@exalaboratories.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
ndarray = "0.16.1"
nalgebra = "0.33.2"
num-traits = "0.2.19"
simba = "0.9.0"
rand = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "non_convex_opt"
path = "src/lib.rs"
